# ChangeLog for dev-perl/Date-ICal
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Date-ICal/ChangeLog,v 1.31 2011/05/12 16:38:55 tove Exp $

*Date-ICal-2.649.0 (12 May 2011)

  12 May 2011; Torsten Veller <tove@gentoo.org> +Date-ICal-2.649.0.ebuild:
  Version bump

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Date-ICal-1.72.ebuild:
  Ebuild maintenance

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Date-ICal-1.72.ebuild:
  Adding perl dep; fixed DEPEND

  04 Jul 2006; Christian Hartmann <ian@gentoo.org> Date-ICal-1.72.ebuild:
  Fixed RDEPEND wrt bug #134781

  13 Feb 2006; <mcumming@gentoo.org> Date-ICal-1.72.ebuild:
  Virtual for perl-core dep

  03 Oct 2005; Aron Griffis <agriffis@gentoo.org> Date-ICal-1.72.ebuild:
  Mark 1.72 stable on ia64

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org> Date-ICal-1.72.ebuild:
  add ~ia64

  25 May 2005; Michael Cummings <mcummings@gentoo.org> Date-ICal-1.72.ebuild:
  dev-perl/Time-Local => perl-core/Time-Local migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org> Date-ICal-1.72.ebuild:
  dev-perl/Time-HiRes => perl-core/Time-HiRes migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org> Date-ICal-1.72.ebuild:
  dev-perl/Test-Simple => perl-core/Test-Simple migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org> Date-ICal-1.72.ebuild:
  dev-perl/Test-Harness => perl-core/Test-Harness migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org> Date-ICal-1.72.ebuild:
  dev-perl/Storable => perl-core/Storable migration

  25 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  -Date-ICal-1.69-r1.ebuild, -Date-ICal-1.69.ebuild, Date-ICal-1.72.ebuild:
  Cleaning

  19 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> Date-ICal-1.72.ebuild:
  Stable on ppc.

  07 Apr 2005; Yuta SATOH <nigoro@gentoo.org> Date-ICal-1.72.ebuild:
  Stable on ppc64

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :