@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Date-ICal
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Date-ICal/ChangeLog,v 1.31 2011/05/12 16:38:55 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Date-ICal/ChangeLog,v 1.32 2011/07/12 16:22:39 tove Exp $
+
+*Date-ICal-2.678.0 (12 Jul 2011)
+
+  12 Jul 2011; Torsten Veller <tove@gentoo.org> +Date-ICal-2.678.0.ebuild:
+  Version bump
 
 *Date-ICal-2.649.0 (12 May 2011)
 
